# atlas-riyadh

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: pyproject.toml
backend/api/: main.py  schemas.py  service.py
backend/api/routers/: city.py  simulation.py
backend/api/websocket/: manager.py
backend/atlas_core/: __init__.py
backend/atlas_core/city/: __init__.py  categories.py  features.py  ingest.py  loader.py  model.py  network.py  spatial.py  types.py
backend/atlas_core/config/: __init__.py  logging.py  settings.py
backend/atlas_core/simulation/: __init__.py  behavior.py  clock.py  events.py  routing.py  schedule.py  types.py  weather.py  world.py
backend/atlas_core/simulation/agents/: __init__.py  citizen.py  factory.py
backend/database/init/: 01_extensions.sql
backend/tests/: conftest.py
backend/tests/integration/: test_api_http.py  test_api_service.py
backend/tests/unit/: test_city_categories.py  test_city_features.py  test_city_network.py  test_city_spatial.py  test_foundation.py  test_sim_behavior.py  test_sim_clock.py  test_sim_events.py  test_sim_population.py  test_sim_routing.py  test_sim_schedule.py  test_sim_weather.py  test_sim_world.py
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  theme.ts  types.ts
frontend/src/api/: client.ts
frontend/src/hooks/: useSimulationSocket.ts
frontend/src/map/: MapView.tsx  mapStyle.ts
frontend/src/panels/: ControlPanel.tsx  MetricsPanel.tsx
legacy/: README.prototype.md  app.py  requirements.txt  test_simulation.prototype.py
legacy/atlas/: __init__.py  config.py  data.py  models.py  simulation.py
