[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-core"
version = "0.1.0"
description = "Atlas — an agent-based digital twin that simulates real cities (first city: Riyadh)."
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Atlas" }]

# Runtime dependencies grouped by the layer that introduces them.
dependencies = [
    # Configuration & validation (used from Milestone 0 onward)
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",

    # City data layer (Milestone 1)
    "osmnx>=2.0",
    "geopandas>=1.0",
    "networkx>=3.4",
    "shapely>=2.0",
    "pyproj>=3.7",
    "numpy>=2.0",
    "scipy>=1.14",

    # API layer (Milestone 4)
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",

    # Persistence (Milestone 3)
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "pre-commit>=3.8",
    "httpx>=0.27",              # FastAPI TestClient transport
    "types-redis>=4.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas_core*", "api*"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["atlas_core", "api", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes + pycodestyle
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",
]
ignore = ["B008"]    # FastAPI Depends() in defaults is idiomatic

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
# Third-party geo/data libraries ship incomplete or no stubs.
[[tool.mypy.overrides]]
module = ["osmnx.*", "geopandas.*", "shapely.*", "networkx.*", "geoalchemy2.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
markers = [
    "integration: tests that require external services (Postgres/Redis).",
    "slow: tests that download or process large OSM extracts.",
]

[tool.coverage.run]
source = ["atlas_core", "api"]
branch = true
